--- a/.github/actions/sls-deploy/action.yaml
+++ b/.github/actions/sls-deploy/action.yaml
@@ -22,7 +22,7 @@ runs:
       working-directory: ${{ inputs.service-folder }}
       shell: bash
       run: |
-        CREDS=`aws sts assume-role --role-arn arn:aws:iam::${{ inputs.aws-account-id }}:role/${{ inputs.app-id }}-DeployerRole --role-session-name=gha_deployer`
+        CREDS=`aws sts assume-role --role-arn arn:aws:iam::${{ inputs.aws-account-id }}:role/${{ inputs.app-id }}-role-DeployerRole --role-session-name=gha_deployer`
         export AWS_ACCESS_KEY_ID=`echo $CREDS | jq -r '.Credentials.AccessKeyId'`
         export AWS_SECRET_ACCESS_KEY=`echo $CREDS | jq -r '.Credentials.SecretAccessKey'`
         export AWS_SESSION_TOKEN=`echo $CREDS | jq -r '.Credentials.SessionToken'`
