--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "deploy-dev": "sls deploy --stage dev"
+    "deploy-dev": "sls deploy --stage dev",
+    "deploy-dev-debug": "sls deploy --stage dev --debug '*'"
   },
   "author": "",
   "license": "ISC",
