protect temperature api with api key

--- a/serverless.yml
+++ b/serverless.yml
@@ -94,12 +94,14 @@ functions:
       - http:
           path: /temperatures/
           method: get
+          private: true
   create:
     handler: handler.insert
     events:
       - http:
           path: /temperatures/
           method: post
+          private: true
   
   readme:
     handler: readme.handler
