--- a/serverless.yml
+++ b/serverless.yml
@@ -102,6 +102,13 @@ functions:
           path: /temperatures/
           method: post
           private: true
+
+  registerFcmToken:
+    handler: handler.registerFcmToken
+    events:
+      - http:
+          path: /fcm-tokens/
+          method: post
   
   readme:
     handler: readme.handler
@@ -131,6 +138,20 @@ resources: # CloudFormation template syntax from here on.
       Type: AWS::DynamoDB::Table
       Properties:
         TableName: ${env:APP_ID}-TemperatureTable-${self:provider.stage}
+        AttributeDefinitions:
+          - AttributeName: datetime
+            AttributeType: S
+        KeySchema:
+          - AttributeName: datetime
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+        # ProvisionedThroughput:
+        #   ReadCapacityUnits: 1
+        #   WriteCapacityUnits: 1
+    FcmTokenTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${env:APP_ID}-FcmTokens-${self:provider.stage}
         AttributeDefinitions:
           - AttributeName: datetime
             AttributeType: S
