--- a/serverless.yml
+++ b/serverless.yml
@@ -149,17 +149,17 @@ resources: # CloudFormation template syntax from here on.
         # ProvisionedThroughput:
         #   ReadCapacityUnits: 1
         #   WriteCapacityUnits: 1
-    # FcmTokenTable:
-    #   Type: AWS::DynamoDB::Table
-    #   Properties:
-    #     TableName: ${env:APP_ID}-FcmTokens-${self:provider.stage}
-    #     AttributeDefinitions:
-    #       - AttributeName: fcmToken
-    #         AttributeType: S
-    #     KeySchema:
-    #       - AttributeName: fcmToken
-    #         KeyType: HASH
-    #     BillingMode: PAY_PER_REQUEST
+    FcmTokenTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${env:APP_ID}-FcmTokens-${self:provider.stage}
+        AttributeDefinitions:
+          - AttributeName: fcmToken
+            AttributeType: S
+        KeySchema:
+          - AttributeName: fcmToken
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
         # ProvisionedThroughput:
         #   ReadCapacityUnits: 1
         #   WriteCapacityUnits: 1
