feat: integrate shop api into public-api-ts

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ DOMAIN_NAME=api.your.domain
 CERTIFICATE_NAME=*.your.domain
 
 CORS_ORIGIN=https://web.your.domain
+
+AWS_DEFAULT_USAGE_PLAN_ID=blabla
+README_SECRET=blabla
