--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "shop-server": "ts-node -r ./env.dev.js src/shop/devserver.ts",
     "deploy-dev": "sls deploy --stage dev",
     "deploy-dev-debug": "sls deploy --stage dev --debug '*'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/jest": "^28.1.7",
     "jest": "^28.1.3",
     "serverless": "^3.21.0",
@@ -22,8 +24,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.329.0",
+    "@aws-sdk/client-dynamodb": "^3.687.0",
+    "@aws-sdk/lib-dynamodb": "^3.687.0",
     "@types/aws-lambda": "^8.10.102",
     "aws-sdk": "^2.1195.0",
-    "readmeio": "^6.1.0"
+    "express": "^4.21.1",
+    "readmeio": "^6.1.0",
+    "serverless-http": "^3.2.0"
   }
 }
