--- a/serverless.yml
+++ b/serverless.yml
@@ -56,17 +56,21 @@ provider:
   #     #   - Special-Response-Header
   #     maxAge: 6000 # In seconds
   iam:
-    deploymentRole: 'arn:aws:iam::${aws:accountId}:role/public-api-ts-role-CloudFormationExecutionRole'
+    deploymentRole: "arn:aws:iam::${aws:accountId}:role/public-api-ts-role-CloudFormationExecutionRole"
     role:
       statements:
+        - Effect: "Allow"
+          Resource: "*"
+          Action: "s3:*"
         # Allow functions to list all buckets
         - Effect: Allow
-          Action: 'dynamodb:*'
+          Action: "dynamodb:*"
           # Resource: 'arn:aws:dynamodb:::table/TemperatureTable-${self:provider.stage}'
-          Resource: 'arn:aws:dynamodb:${self:provider.region}:*:table/*'
+          Resource: "arn:aws:dynamodb:${self:provider.region}:*:table/*"
         - Effect: Allow
-          Action: 'apigateway:*'
-          Resource: 'arn:aws:apigateway:ap-northeast-2::/*'
+          Action: "apigateway:*"
+          Resource: "arn:aws:apigateway:ap-northeast-2::/*"
+  timeout: 25 # optional, in seconds, default is 6, API Gateway timeout is 30 seconds
   environment:
     AWS_DEFAULT_USAGE_PLAN_ID: ${env:AWS_DEFAULT_USAGE_PLAN_ID}
     README_SECRET: ${env:README_SECRET}
@@ -110,7 +114,7 @@ functions:
           path: /fcm-tokens/
           method: post
           cors: true
-  
+
   readme:
     handler: readme.handler
     events:
@@ -132,6 +136,11 @@ functions:
           path: /hello
           method: get
           private: true
+
+  ahopApi:
+    handler: src/shop/index.handler
+    events:
+      - httpApi: "*"
 
 resources: # CloudFormation template syntax from here on.
   Resources:
