feat: implement `/shop/profile`

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ CORS_ORIGIN=https://web.your.domain
 
 AWS_DEFAULT_USAGE_PLAN_ID=blabla
 README_SECRET=blabla
+COGNITO_USER_POOL_ID=ap-northeast-2_blabla
