--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "shop-server": "ts-node -r ./env.dev.js src/shop/devserver.ts",
+    "shop-server": "nodemon -e 'js,mjs,cjs,json,ts' --exec ts-node -r ./env.dev.js src/shop/devserver.ts",
     "deploy-dev": "sls deploy --stage dev",
     "deploy-dev-debug": "sls deploy --stage dev --debug '*'"
   },
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^28.1.7",
     "jest": "^28.1.3",
+    "nodemon": "^3.1.7",
     "serverless": "^3.21.0",
     "serverless-domain-manager": "^6.1.0",
     "serverless-plugin-typescript": "^2.1.2",
@@ -24,11 +25,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.329.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.687.0",
     "@aws-sdk/client-dynamodb": "^3.687.0",
     "@aws-sdk/lib-dynamodb": "^3.687.0",
     "@types/aws-lambda": "^8.10.102",
     "aws-sdk": "^2.1195.0",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "readmeio": "^6.1.0",
     "serverless-http": "^3.2.0"
   }
