--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,17 @@
-AWS_REGION=ap-northeast-2
-DEPLOYMENT_BUCKET=your-deploy
 # APP_ID is used for cloudformation
 APP_ID=public-api-ts
+
+# used by serverless.yml
+AWS_REGION=ap-northeast-2
+DEPLOYMENT_BUCKET=dgkimnet-deploy
 
 DOMAIN_NAME=api.your.domain
 CERTIFICATE_NAME=*.your.domain
 
-CORS_ORIGIN=https://web.your.domain
-
+# used by app
 AWS_DEFAULT_USAGE_PLAN_ID=blabla
 README_SECRET=blabla
 COGNITO_USER_POOL_ID=ap-northeast-2_blabla
+
+# no longer needed
+CORS_ORIGIN=https://web.your.domain
