--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,9 @@ AWS_DEFAULT_USAGE_PLAN_ID=blabla
 README_SECRET=blabla
 COGNITO_USER_POOL_ID=ap-northeast-2_blabla
 
+DYNAMODB_TABLE_ORDER=orders
+DYNAMODB_TABLE_CUSTOMER=customers
+DYNAMODB_TABLE_SHOP=shops
+
 # no longer needed
 CORS_ORIGIN=https://web.your.domain
