--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "nanoid": "^3.3.7",
     "readmeio": "^6.1.0",
     "serverless-http": "^3.2.0"
   }
