wip: public api

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,12 @@ COGNITO_USER_POOL_ID=ap-northeast-2_blabla
 DYNAMODB_TABLE_ORDER=orders
 DYNAMODB_TABLE_CUSTOMER=customers
 DYNAMODB_TABLE_SHOP=shops
+DYNAMODB_TABLE_USERSHOP=usershops
+
+DYNAMODB_TABLE_TELEGRAM_WEBHOOK=telegram-webhooks
+DYNAMODB_TABLE_TELEGRAM_USER=telegram-users
+
+TELEGRAM_BOT_TOKEN=blabla
 
 # no longer needed
 CORS_ORIGIN=https://web.your.domain
