--- a/serverless.yml
+++ b/serverless.yml
@@ -85,6 +85,10 @@ provider:
     DYNAMODB_TABLE_ORDER: ${env:DYNAMODB_TABLE_ORDER}
     DYNAMODB_TABLE_CUSTOMER: ${env:DYNAMODB_TABLE_CUSTOMER}
     DYNAMODB_TABLE_SHOP: ${env:DYNAMODB_TABLE_SHOP}
+    DYNAMODB_TABLE_USERSHOP: ${env:DYNAMODB_TABLE_USERSHOP}
+    DYNAMODB_TABLE_TELEGRAM_WEBHOOK: ${env:DYNAMODB_TABLE_TELEGRAM_WEBHOOK}
+    DYNAMODB_TABLE_TELEGRAM_USER: ${env:DYNAMODB_TABLE_TELEGRAM_USER}
+    TELEGRAM_BOT_TOKEN: ${env:TELEGRAM_BOT_TOKEN}
 
 plugins:
   - serverless-domain-manager
