--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jest": "^28.1.7",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "jest": "^28.1.3",
     "nodemon": "^3.1.7",
     "serverless": "^3.21.0",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "nanoid": "^3.3.7",
+    "node-telegram-bot-api": "^0.66.0",
     "readmeio": "^6.1.0",
     "serverless-http": "^3.2.0"
   }
