--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nanoid": "^3.3.7",
     "node-telegram-bot-api": "^0.66.0",
     "readmeio": "^6.1.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "twilio": "^5.3.5"
   }
 }
