--- a/serverless.yml
+++ b/serverless.yml
@@ -88,7 +88,10 @@ provider:
     DYNAMODB_TABLE_USERSHOP: ${env:DYNAMODB_TABLE_USERSHOP}
     DYNAMODB_TABLE_TELEGRAM_WEBHOOK: ${env:DYNAMODB_TABLE_TELEGRAM_WEBHOOK}
     DYNAMODB_TABLE_TELEGRAM_USER: ${env:DYNAMODB_TABLE_TELEGRAM_USER}
+
     TELEGRAM_BOT_TOKEN: ${env:TELEGRAM_BOT_TOKEN}
+    TWILIO_ACCOUNT_SID: ${env:TWILIO_ACCOUNT_SID}
+    TWILIO_AUTH_TOKEN: ${env:TWILIO_AUTH_TOKEN}
 
 plugins:
   - serverless-domain-manager
