chore: update serverless.yml

--- a/serverless.yml
+++ b/serverless.yml
@@ -88,6 +88,8 @@ provider:
     DYNAMODB_TABLE_USERSHOP: ${env:DYNAMODB_TABLE_USERSHOP}
     DYNAMODB_TABLE_TELEGRAM_WEBHOOK: ${env:DYNAMODB_TABLE_TELEGRAM_WEBHOOK}
     DYNAMODB_TABLE_TELEGRAM_USER: ${env:DYNAMODB_TABLE_TELEGRAM_USER}
+    DYNAMODB_TABLE_WHATSAPP_WEBHOOK: ${env:DYNAMODB_TABLE_WHATSAPP_WEBHOOK}
+    DYNAMODB_TABLE_WHATSAPP_USER: ${env:DYNAMODB_TABLE_WHATSAPP_USER}
 
     TELEGRAM_BOT_TOKEN: ${env:TELEGRAM_BOT_TOKEN}
     TWILIO_ACCOUNT_SID: ${env:TWILIO_ACCOUNT_SID}
