--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ DYNAMODB_TABLE_TELEGRAM_WEBHOOK=telegram-webhooks
 DYNAMODB_TABLE_TELEGRAM_USER=telegram-users
 DYNAMODB_TABLE_WHATSAPP_WEBHOOK=twilio-webhooks
 DYNAMODB_TABLE_WHATSAPP_USER=twilio-users
+DYNAMODB_TABLE_FCM_TOKEN=fcm-tokens
 
 DYNAMODB_STREAM_ARN_ORDER=arn:aws:dynamodb:ap-northeast-2:blabla:table/orders/stream/blabna
 
