--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/aws-lambda": "^8.10.102",
     "aws-sdk": "^2.1195.0",
     "express": "^4.21.1",
+    "firebase-admin": "^12.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "nanoid": "^3.3.7",
