--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,11 @@ service: public-api-ts
 frameworkVersion: "3"
 useDotenv: true
 
+# package to include service-account.json
+package:
+  include:
+    - service-account.json
+
 provider:
   name: aws
   runtime: nodejs18.x
@@ -90,6 +95,7 @@ provider:
     DYNAMODB_TABLE_TELEGRAM_USER: ${env:DYNAMODB_TABLE_TELEGRAM_USER}
     DYNAMODB_TABLE_WHATSAPP_WEBHOOK: ${env:DYNAMODB_TABLE_WHATSAPP_WEBHOOK}
     DYNAMODB_TABLE_WHATSAPP_USER: ${env:DYNAMODB_TABLE_WHATSAPP_USER}
+    DYNAMODB_TABLE_FCM_TOKEN: ${env:DYNAMODB_TABLE_FCM_TOKEN}
 
     TELEGRAM_BOT_TOKEN: ${env:TELEGRAM_BOT_TOKEN}
     TWILIO_ACCOUNT_SID: ${env:TWILIO_ACCOUNT_SID}
