feat: update fcm

--- a/serverless.yml
+++ b/serverless.yml
@@ -96,6 +96,7 @@ provider:
     DYNAMODB_TABLE_WHATSAPP_WEBHOOK: ${env:DYNAMODB_TABLE_WHATSAPP_WEBHOOK}
     DYNAMODB_TABLE_WHATSAPP_USER: ${env:DYNAMODB_TABLE_WHATSAPP_USER}
     DYNAMODB_TABLE_FCM_TOKEN: ${env:DYNAMODB_TABLE_FCM_TOKEN}
+    DYNAMODB_TABLE_FCM_SENT: ${env:DYNAMODB_TABLE_FCM_SENT}
 
     TELEGRAM_BOT_TOKEN: ${env:TELEGRAM_BOT_TOKEN}
     TWILIO_ACCOUNT_SID: ${env:TWILIO_ACCOUNT_SID}
