--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ DYNAMODB_TABLE_TELEGRAM_USER=telegram-users
 DYNAMODB_TABLE_WHATSAPP_WEBHOOK=twilio-webhooks
 DYNAMODB_TABLE_WHATSAPP_USER=twilio-users
 DYNAMODB_TABLE_FCM_TOKEN=fcm-tokens
+DYNAMODB_TABLE_FCM_SENT=fcm-sents
 
 DYNAMODB_STREAM_ARN_ORDER=arn:aws:dynamodb:ap-northeast-2:blabla:table/orders/stream/blabna
 
