--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,12 @@ DYNAMODB_TABLE_WHATSAPP_WEBHOOK=twilio-webhooks
 DYNAMODB_TABLE_WHATSAPP_USER=twilio-users
 DYNAMODB_TABLE_FCM_TOKEN=fcm-tokens
 DYNAMODB_TABLE_FCM_SENT=fcm-sents
+DYNAMODB_TABLE_SOCKET=sockets
+DYNAMODB_TABLE_SOCKET_MESSAGE=socket-messages
 
 DYNAMODB_STREAM_ARN_ORDER=arn:aws:dynamodb:ap-northeast-2:blabla:table/orders/stream/blabna
+
+WEBSOCKET_API_ID=blabla
 
 TELEGRAM_BOT_TOKEN=blabla
 TWILIO_ACCOUNT_SID=blabla
