--- a/serverless.yml
+++ b/serverless.yml
@@ -81,6 +81,12 @@ provider:
         - Effect: Allow
           Action: "apigateway:*"
           Resource: "arn:aws:apigateway:ap-northeast-2::/*"
+        # allow execute-api:Invoke
+        - Effect: Allow
+          Action:
+            - "execute-api:Invoke"
+          Resource:
+            - "arn:aws:execute-api:${self:provider.region}:${self:provider.accountId}:*"
   timeout: 25 # optional, in seconds, default is 6, API Gateway timeout is 30 seconds
   environment:
     AWS_DEFAULT_USAGE_PLAN_ID: ${env:AWS_DEFAULT_USAGE_PLAN_ID}
