--- a/serverless.yml
+++ b/serverless.yml
@@ -116,6 +116,8 @@ provider:
     # TODO 자동으로 가져올 방법이 없나.
     WEBSOCKET_API_ID: ${env:WEBSOCKET_API_ID}
 
+    FRONTEND_URL: ${env:FRONTEND_URL}
+
 plugins:
   - serverless-domain-manager
   - serverless-plugin-typescript
