--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/lib-dynamodb": "^3.687.0",
     "@types/aws-lambda": "^8.10.102",
     "aws-sdk": "^2.1195.0",
+    "axios": "^1.7.7",
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "jsonwebtoken": "^9.0.2",
