--- a/serverless.yml
+++ b/serverless.yml
@@ -112,6 +112,7 @@ provider:
     TELEGRAM_BOT_TOKEN: ${env:TELEGRAM_BOT_TOKEN}
     TWILIO_ACCOUNT_SID: ${env:TWILIO_ACCOUNT_SID}
     TWILIO_AUTH_TOKEN: ${env:TWILIO_AUTH_TOKEN}
+    TOSS_AUTH_TOKEN: ${env:TOSS_AUTH_TOKEN}
 
     # TODO 자동으로 가져올 방법이 없나.
     WEBSOCKET_API_ID: ${env:WEBSOCKET_API_ID}
