--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "shop-server": "nodemon -e 'js,mjs,cjs,json,ts' --exec ts-node -r ./env.dev.js src/shop/devserver.ts",
+    "chat-server": "nodemon -e 'js,mjs,cjs,json,ts' --exec ts-node -r ./env.dev.js src/websocket/devserver.ts",
     "deploy-dev": "sls deploy --stage dev",
     "deploy-dev-debug": "sls deploy --stage dev --debug '*'"
   },
@@ -15,6 +16,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^28.1.7",
     "@types/node-telegram-bot-api": "^0.64.7",
+    "@types/ws": "^8.5.13",
     "jest": "^28.1.3",
     "nodemon": "^3.1.7",
     "serverless": "^3.21.0",
@@ -39,6 +41,7 @@
     "jwks-rsa": "^3.1.0",
     "nanoid": "^3.3.7",
     "node-telegram-bot-api": "^0.66.0",
+    "openai": "^4.77.3",
     "readmeio": "^6.1.0",
     "serverless-http": "^3.2.0",
     "twilio": "^5.3.5"
